Add a lot of fcking cards